kubernetes/app/kite/cnpg/tlsroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: &name kite-cnpg
spec:
  parentRefs:
    - &gateway
      name: default
      sectionName: 5432-tls-wildcard
      namespace: gateway
    - <<: *gateway
      sectionName: 5432-tls-wildcard-local
  hostnames:
    - kite-db.${IDVN_DOMAIN}
    - kite-db.${LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: *name
          port: 5432
